RESOLVED FIXED238195
Context2D drawImage(img, x, y, w, h) should not throw IndexSizeError when width == 0 or height == 0
https://bugs.webkit.org/show_bug.cgi?id=238195
Summary Context2D drawImage(img, x, y, w, h) should not throw IndexSizeError when wid...
Kimmo Kinnunen
Reported 2022-03-22 02:02:35 PDT
Created attachment 455352 [details] testcase Context2D drawImage(img, x, y, w, h) should not throw IndexException when width == 0 or height == 0
Attachments
testcase (169 bytes, text/html)
2022-03-22 02:02 PDT, Kimmo Kinnunen
no flags
Patch (9.91 KB, patch)
2022-03-22 04:26 PDT, Kimmo Kinnunen
no flags
Patch (11.63 KB, patch)
2022-03-22 06:37 PDT, Kimmo Kinnunen
no flags
Kimmo Kinnunen
Comment 2 2022-03-22 04:26:29 PDT
Kimmo Kinnunen
Comment 3 2022-03-22 06:37:45 PDT
EWS
Comment 4 2022-03-23 10:06:27 PDT
Committed r291748 (248780@main): <https://commits.webkit.org/248780@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 455369 [details].
Radar WebKit Bug Importer
Comment 5 2022-03-23 10:07:29 PDT
markus
Comment 6 2022-08-03 20:12:22 PDT
This still does not work in macOS 12.5 with https://www.shadertoy.com/view/flfyWH
Note You need to log in before you can comment on or make changes to this bug.