Context2D drawImage(img, x, y, w, h) should not throw IndexSizeError when width == 0 or height == 0 https://bugs.webkit.org/show_bug.cgi?id=238195

Patch by Kimmo Kinnunen <kkinnunen@apple.com> on 2022-03-23
Reviewed by Simon Fraser.

Source/WebCore:

When drawing HTMLImageElement with width == 0 or height==0, do nothing as per spec.

When drawing HTMLCanvasElement with source rectangle width == 0 or height == 0,
do nothing as per spec.

Previously these would throw IndexSizeError. The CanvasDrawImage methods do not throw these.

Spec:
HTML Living Standard — Last Updated 17 March 2022
https://html.spec.whatwg.org/multipage/canvas.html#dom-context-2d-drawimage

* html/canvas/CanvasRenderingContext2DBase.cpp:
(WebCore::CanvasRenderingContext2DBase::drawImage):

LayoutTests:

* fast/canvas/canvas-overloads-drawImage-expected.txt:
* fast/canvas/canvas-overloads-drawImage.html:
* fast/canvas/drawImage-with-invalid-args-expected.txt:
* fast/canvas/drawImage-with-invalid-args.html:


Canonical link: https://commits.webkit.org/248780@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@291748 268f45cc-cd09-0410-ab3c-d52691b4dbfc